// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topics snapshots fetchTopics: network error 1`] = `
<div>
  <div>
    Error: 
    {"graphQLErrors":[],"networkError":{},"message":"FetchTopicsQuery: network error"}
  </div>
</div>
`;

exports[`Topics snapshots loading 1`] = `
<div>
  <div>
    Loading...
  </div>
</div>
`;
